--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "Phi FileSystem",
 	"autoload": {
 		"psr-4": {
-			"Phi\\Event\\": "source/class"
+			"Phi\\FileSystem\\": "source/class"
 		},
 		"files": [
 
